# controllers/user.js
@@ -1,48 +1,116 @@
 const db = require('../models');
 const User = db.user;
+const passwordUtil = require('../util/passwordComplexityCheck');
 
-exports.create = (req, res) => {
-  // Validate request
-  if (!req.body.username || !req.body.password) {
-    res.status(400).send({ message: 'Content can not be empty!' });
-    return;
+module.exports.create = (req, res) => {
+  try {
+    if (!req.body.username || !req.body.password) {
+      res.status(400).send({ message: 'Content can not be empty!' });
+      return;
+    }
+    const password = req.body.password;
+    const passwordCheck = passwordUtil.passwordPass(password);
+    if (passwordCheck.error) {
+      res.status(400).send({ message: passwordCheck.error });
+      return;
+    }
+    const user = new User(req.body);
+    user
+      .save()
+      .then((data) => {
+        console.log(data);
+        res.status(201).send(data);
+      })
+      .catch((err) => {
+        res
+          .status(500)
+          .send({ message: err.message || 'Some error occurred while creating the user.' });
+      });
+  } catch (err) {
+    res.status(500).json(err);
   }
-
-  const user = new User(req.body);
-  user
-    .save()
-    .then((data) => {
-      console.log(data);
-      res.status(201).send(data);
-    })
-    .catch((err) => {
-      res
-        .status(500)
-        .send({ message: err.message || 'Some error occurred while creating the user.' });
-    });
 };
 
-exports.getAll = (req, res) => {
-  User.find({})
-    .then((data) => {
-      res.send(data);
-    })
-    .catch((err) => {
-      res.status(500).send({
-        message: err.message || 'Some error occurred while retrieving users.'
+module.exports.getAll = (req, res) => {
+  try {
+    User.find({})
+      .then((data) => {
+        res.send(data);
+      })
+      .catch((err) => {
+        res.status(500).send({
+          message: err.message || 'Some error occurred while retrieving users.'
+        });
+      });
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+module.exports.getUser = (req, res) => {
+  try {
+    const username = req.params.username;
+    User.find({ username: username })
+      .then((data) => {
+        res.send(data);
+      })
+      .catch((err) => {
+        res
+          .status(500)
+          .send({ message: err.message || 'Some error occurred while retrieving users.' });
+      });
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+module.exports.updateUser = async (req, res) => {
+  try {
+    const username = req.params.username;
+    if (!username) {
+      res.status(400).send({ message: 'Invalid Username Supplied' });
+      return;
+    }
+    const password = req.body.password;
+    const passwordCheck = passwordUtil.passwordPass(password);
+    if (passwordCheck.error) {
+      res.status(400).send({ message: passwordCheck.error });
+      return;
+    }
+    User.findOne({ username: username }, function (err, user) {
+      user.username = req.params.username;
+      user.password = req.body.password;
+      user.displayName = req.body.displayName;
+      user.info = req.body.info;
+      user.profile = req.body.profile;
+      user.save(function (err) {
+        if (err) {
+          res.status(500).json(err || 'Some error occurred while updating the contact.');
+        } else {
+          res.status(204).send();
+        }
       });
     });
+  } catch (err) {
+    res.status(500).json(err);
+  }
 };
 
-exports.getUser = (req, res) => {
-  const username = req.params.username;
-  User.find({ username: username })
-    .then((data) => {
-      res.send(data);
-    })
-    .catch((err) => {
-      res
-        .status(500)
-        .send({ message: err.message || 'Some error occurred while retrieving users.' });
+module.exports.deleteUser = async (req, res) => {
+  try {
+    const username = req.params.username;
+    if (!username) {
+      res.status(400).send({ message: 'Invalid Username Supplied' });
+      return;
+    }
+    User.deleteOne({ username: username }, function (err, result) {
+      if (err) {
+        res.status(500).json(err || 'Some error occurred while deleting the contact.');
+      } else {
+        res.status(204).send(result);
+      }
     });
+  } catch (err) {
+    res.status(500).json(err || 'Some error occurred while deleting the contact.');
+  }
 };
