# routes/user.js
@@ -5,5 +5,7 @@ const userController = require('../controllers/user');
 router.get('/', userController.getAll);
 router.get('/:username', userController.getUser);
 router.post('/', userController.create);
+router.put('/:username', userController.updateUser);
+router.delete('/:username', userController.deleteUser);
 
 module.exports = router;
